<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Pantalla_BDCentros" >

    <TextView
        android:id="@+id/Titutlo_Centros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/Bienvenido"
        android:textSize="20sp" />

    <Button
        android:id="@+id/BtnPersonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BtnCentros"
        android:layout_below="@+id/BtnCentros"
        android:layout_marginTop="38dp"
        android:text="@string/IrPersonal" />

    <Button
        android:id="@+id/BtnProfesores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BtnPersonal"
        android:layout_below="@+id/BtnPersonal"
        android:layout_marginTop="46dp"
        android:text="@string/IrProfesores" />

    <Button
        android:id="@+id/BtnCentros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/Titutlo_Centros"
        android:layout_below="@+id/Titutlo_Centros"
        android:layout_marginTop="42dp"
        android:text="@string/IrCentros" />

    <TextView
        android:id="@+id/TxtCentros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/BtnCentros"
        android:layout_alignBottom="@+id/BtnCentros"
        android:layout_alignLeft="@+id/Titutlo_Centros"
        android:layout_marginLeft="18dp"
        android:text="@string/TxtCentros" />

    <TextView
        android:id="@+id/TxtPersonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/BtnPersonal"
        android:layout_alignBottom="@+id/BtnPersonal"
        android:layout_alignLeft="@+id/TxtCentros"
        android:text="@string/TxtPersonal" />

    <TextView
        android:id="@+id/TxtProfesores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/BtnProfesores"
        android:layout_alignBottom="@+id/BtnProfesores"
        android:layout_alignLeft="@+id/TxtPersonal"
        android:text="@string/TxtProfesores" />

</RelativeLayout>